--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 	},
 	"dependencies": {
 		"@ant-design/cssinjs": "^1.17.2",
+		"@lit-protocol/lit-node-client": "3",
+		"@lit-protocol/types": "3",
 		"@t3-oss/env-nextjs": "^0.6.1",
 		"@thirdweb-dev/chains": "^0.1.54",
 		"@thirdweb-dev/react": "^3.16.5",
